fixed spacing, added ad cat

--- a/style.css
+++ b/style.css
@@ -164,6 +164,7 @@ img {
   margin-left: auto;
   margin-right: auto;
   opacity: 0.7;
+  margin-top: 20px;
 }
 
 .big {
